objects/G4S__Session__c.object
<CustomObject>
    <fields>
        <fullName>G4S__Duration_secs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration (secs)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Guests_Count__c</fullName>
        <label>Guests Count</label>
        <summaryForeignKey>G4S__Guest__c.G4S__Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>G4S__Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Sync__c</fullName>
        <label>Glance Sync</label>
        <referenceTo>G4S__Sync__c</referenceTo>
        <relationshipLabel>Glance Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G4S__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cobrowse</fullName>
                </value>
                <value>
                    <fullName>Screenshare</fullName>
                </value>
                <value>
                    <fullName>ScreenshareReverse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__User_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Glance User Settings</label>
        <referenceTo>G4S__User_Settings__c</referenceTo>
        <relationshipLabel>Glance Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G4S__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Glance_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Glance Session</label>
    <listViews>
        <fullName>G4S__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Glance Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glance Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>